[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "chempkg"
version = "0.1.0"
authors = [
  { name="Liam ADGH", email="esquimau.valet-0t@icloud.com" },
]
description = "Package de chimie pour le projet Python ISDS"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "matplotlib",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["chempkg*"]